@@ -1,3 +1,6 @@
+31 August 2017: Wouter
+	- Fix #1424: cachedb:testframe is not thread safe.
+
 30 August 2017: Wouter
 	- updated contrib/fastrpz.patch to apply with configparser changes.
 	- Fix 1416: qname-minimisation breaks TLSA lookups with CNAMEs.
